[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librqbit = "8.0.0"
rfd = "0.15.3"
slint = "1.8.0"
tokio = { version = "1.44.1", features = ["full"] }

[build-dependencies]
slint-build = "1.8.0"
